GraphCodeBERT/clonedetection/code/parser/tree-sitter-c-sharp/corpus/type-events.txt
================================================================================
Class event declarations
================================================================================

class A {
  public event EventHandler<T> SomeEvent { add { } remove { } }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (event_declaration
        (modifier)
        type: (generic_name
          name: (identifier)
          type_arguments: (type_argument_list
            (identifier)))
        name: (identifier)
        accessors: (accessor_list
          (accessor_declaration
            body: (block))
          (accessor_declaration
            body: (block)))))))

================================================================================
Struct event declarations
================================================================================

struct A {
  public event EventHandler<T> SomeEvent { add { } remove { } }
}

--------------------------------------------------------------------------------

(compilation_unit
  (struct_declaration
    name: (identifier)
    body: (declaration_list
      (event_declaration
        (modifier)
        type: (generic_name
          name: (identifier)
          type_arguments: (type_argument_list
            (identifier)))
        name: (identifier)
        accessors: (accessor_list
          (accessor_declaration
            body: (block))
          (accessor_declaration
            body: (block)))))))

================================================================================
Class event declarations with expression bodies
================================================================================

class A {
  public event EventHandler SomeEvent { add => addSomething(); remove => removeSomething(); }
}

--------------------------------------------------------------------------------

(compilation_unit
  (class_declaration
    name: (identifier)
    body: (declaration_list
      (event_declaration
        (modifier)
        type: (identifier)
        name: (identifier)
        accessors: (accessor_list
          (accessor_declaration
            body: (arrow_expression_clause
              (invocation_expression
                function: (identifier)
                arguments: (argument_list))))
          (accessor_declaration
            body: (arrow_expression_clause
              (invocation_expression
                function: (identifier)
                arguments: (argument_list)))))))))
